--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
         additional_dependencies: ['@commitlint/config-angular']
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: master
+    rev: v2.17.13
     hooks:
       - id: commitizen
         stages: [commit-msg]
