--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,45 +1,24 @@
-# Publish package on release branch if it's tagged with 'v*'
-
 name: release & publish workflow
 
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branch: release
     tags:
       - 'v*'
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   release:
     name: Create Release
     runs-on: ubuntu-20.04
 
     strategy:
       matrix:
-        python-versions: [3.8]
+        python-versions: [3.9]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - name: generate change log
-        uses: heinrichreimer/github-changelog-generator-action@v2.1.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issues: true
-          issuesWoLabels: true
-          pullRequests: true
-          prWoLabels: true
-          unreleased: true
-          addSections: '{"documentation":{"prefix":"**Documentation:**","labels":["documentation"]}}'
-          output: CHANGELOG.md
 
       - uses: actions/setup-python@v2
         with:
@@ -53,6 +32,7 @@ jobs:
       - name: pre-publish documentation
         run: |
           poetry install -E doc
+          poetry run cz changelog
           poetry run mkdocs build
 
       - name: publish documentation
@@ -80,9 +60,3 @@ jobs:
           draft: false
           prerelease: false
 
-      - name:
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          skip_existing: true
