--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ name = "cz_conventional_commits"
 version = "0.0.1"
 tag_format = "$version"
 version_files = [
-    "src/__version__.py"
+    "iketm/__init__.py"
 ]
 
 [build-system]
