fix: update commitizen action branch
Signed-off-by: LSmith-Zenoscave <lsmith@zenoscave.com>

--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
+          branch: release
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           changelog_increment_filename: release-body.md
       - name: Release
