--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -2,6 +2,7 @@ name: Upload Python Package
 
 on:
   push:
+    branch: release
     tags:
       - "*" # Will trigger for every tag, alternative: 'v*'
 
