--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --pre -U poetry
           poetry --version
-          poetry install
+          poetry install -E dev -E docs
       - name: Build and publish
         env:
           PYPI_USERNAME: __token__
